[tool.poetry]
name = "unlicense"
version = "0.1.0"
description = "Unpack executables protected with WinLicense/Themida"
authors = ["Erwan Grelet"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.8"
frida = "^15.0"
unicorn = "^1.0"
pyscylla = "^1.0"
lief = "^0.11"
fire = "^0.4"

[tool.poetry.dev-dependencies]
mypy = "^0.910"

[tool.poetry.scripts]
unlicense = 'unlicense.application:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
