[tool.poetry]
name = "unlicense"
version = "0.2.0"
description = "Unpack executables protected with Themida/WinLicense 2.x and 3.x"
authors = ["Erwan Grelet"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.8, <=3.10"
frida = "^15.1"
unicorn = "^1.0"
lief = "^0.11"
fire = "^0.4"
capstone = "^4.0"
xxhash = "^2.0"
pyscylla = "^0.11.0"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
pylint = "^2.11"
yapf = "^0.32.0"
toml = "^0.10.2"
pyinstaller = "^4.10"

[tool.poetry.scripts]
unlicense = 'unlicense.application:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 120
disable = "C0114, C0115, C0116, I1101"
